@@ -321,13 +321,8 @@ public class StudentExamService {
      * @return a map of the User as key, and a list of the users exercises as value
      */
     public Map<User, List<Exercise>> getExercisesOfUserMap(Set<StudentExam> studentExams) {
-        return studentExams.stream()
-                .collect(
-                        Collectors
-                                .toMap(StudentExam::getUser,
-                                        studentExam -> studentExam.getExercises().stream().filter(exercise -> exercise instanceof ModelingExercise
-                                                || exercise instanceof TextExercise || exercise instanceof FileUploadExercise || exercise instanceof ProgrammingExercise)
-                                                .collect(Collectors.toList())));
+        return studentExams.stream().collect(
+                Collectors.toMap(StudentExam::getUser, studentExam -> studentExam.getExercises().stream().filter(exercise -> !(exercise instanceof QuizExercise)).toList()));
     }
 
     /**
